Revert "WIP - pending backport (-> Yarn)"
This reverts commit f43ea911a592bd27d5f35e823158ccc6da22f084.